syntax = "proto3";

package otp.type;

option go_package = "github.com/dwprz/prasorganic-proto/protogen/otp";

message SendReq {
    string email = 1;
}

message VerifyReq {
    string email = 1;
    string otp = 2;
}

message VerifyRes {
    bool valid = 1;
}